[gd_scene load_steps=8 format=3 uid="uid://c8quaugkapyry"]

[ext_resource type="Script" uid="uid://c3sl6jwbqyvyi" path="res://scripts/Show_operation.gd" id="1_0d5ff"]
[ext_resource type="Texture2D" uid="uid://c4ikplght8awa" path="res://assets/Free Pixel Art Forest/Preview/Background.png" id="2_1o26h"]
[ext_resource type="Script" uid="uid://d1emvf3g8jpj" path="res://scripts/operation_generator.gd" id="3_jcpkf"]
[ext_resource type="PackedScene" uid="uid://cam84mvw4u5kt" path="res://scenes/FallingQuestion.tscn" id="4_wr2py"]
[ext_resource type="AudioStream" uid="uid://b27y8uwjrvonh" path="res://assets/audio/sfx/menu/button_click.ogg" id="5_1o26h"]

[sub_resource type="ViewportTexture" id="ViewportTexture_l1v76"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1o26h"]
size = Vector2(821.385, 46.8192)

[node name="Main" type="Node2D"]
script = ExtResource("1_0d5ff")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(413.999, 359.499)
scale = Vector2(0.881468, 0.906685)
texture = ExtResource("2_1o26h")

[node name="OperationGenerator" type="Node2D" parent="."]
position = Vector2(469, 419.5)
script = ExtResource("3_jcpkf")

[node name="QuestionLabel" type="Label" parent="."]
offset_left = 859.0
offset_top = 149.0
offset_right = 1109.0
offset_bottom = 172.0
scale = Vector2(1.49, 1.49)

[node name="InputField_for_answer" type="LineEdit" parent="."]
offset_left = 853.465
offset_top = 478.0
offset_right = 1009.99
offset_bottom = 509.0
scale = Vector2(2.31579, 2.0303)
placeholder_text = "Digite sua resposta"
keep_editing_on_text_submit = true
emoji_menu_enabled = false
deselect_on_focus_loss_enabled = false
drag_and_drop_selection_enabled = false

[node name="SubmitButton" type="Button" parent="."]
offset_left = 923.0
offset_top = 547.0
offset_right = 984.0
offset_bottom = 578.0
scale = Vector2(2.31579, 2.0303)
text = "Enviar"
icon = SubResource("ViewportTexture_l1v76")

[node name="return_to_menu" type="Button" parent="."]
offset_left = 867.0
offset_top = 619.0
offset_right = 1026.19
offset_bottom = 650.0
scale = Vector2(1.695, 1.695)
text = "Voltar para o menu"

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="FallingQuestion" parent="." instance=ExtResource("4_wr2py")]
position = Vector2(6, 2)

[node name="FailZone" type="Area2D" parent="."]
position = Vector2(4, 505)
scale = Vector2(0.998313, 2.98522)
gravity = 979.275

[node name="CollisionShape2D" type="CollisionShape2D" parent="FailZone"]
position = Vector2(409.691, 48.1984)
scale = Vector2(1, 1)
shape = SubResource("RectangleShape2D_1o26h")

[node name="buttonclick" type="AudioStreamPlayer" parent="."]
process_priority = 1
stream = ExtResource("5_1o26h")
volume_db = -20.0

[connection signal="text_submitted" from="InputField_for_answer" to="." method="_on_input_field_for_answer_text_submitted"]
[connection signal="pressed" from="SubmitButton" to="." method="_on_submit_button_pressed"]
[connection signal="pressed" from="return_to_menu" to="." method="_on_return_to_menu_pressed"]
[connection signal="timeout" from="SpawnTimer" to="." method="_on_spawn_timer_timeout"]
